master: updating examples and creation

--- a/env.sh.example
+++ b/env.sh.example
@@ -1,12 +1,20 @@
+# TFE SaaS Organization to install workspaces into.  This should be your own organization
+# ORGANIZATION=jake-lundberg
+
+# Token with access to your repo.  Can be found with:
+# tfe oauth_tokens list --organization=${ORGANIZATION}
+# OAUTH_ID=ot-8675309Jennyyeah
+
 # Github repo for the Azure Terraform assets.
-# AZURE_REPO=grove-mountain/terraform-azure-compute-instance
+# REPO=grove-mountain/terraform-azure-compute-instance
 
 # The name to put in the owner tag
 # OWNER=jlundberg
 
 # Azure region to launch resources into
-# AZURE_REGION="West US"
-REGION="West US"
+# For strings with spaces in them, make sure to "single-double" quote the string
+# AZURE_REGION='"West US"'
+REGION=EastUS
 
 # Environments to create for Azure
 # Each of these will create a separate workspace based off from a branch of the same name
